# sand

./: .gitignore  README.md  index.html  main.js  pyproject.toml
sand/: __init__.py  cli.py  open_cv.py  sand.py
tests/: test_version.py
